added identifier masked causal mask in clip text encoder

--- a/scripts_my/test.ipynb
+++ b/scripts_my/test.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: command not found: load_ext\n",
-      "zsh:1: command not found: autoreload\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7f82b011db10>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "! load_ext autoreload\n",
     "! autoreload 2\n",
@@ -65,6 +46,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from reg_lora.clip_reg import CLIPTiDataset, CLIPTiScoreCalculator\n",
+    "from lora_diffusion.lora import patch_pipe\n",
+    "lora_ckpt = '../lora_output/checkpoints/output_dog_Ti-clip_Nonorm_3e-5/lora_weight_e6_s1000.safetensors'\n",
+    "torch.manual_seed(0)\n",
+    "\n",
+    "patch_pipe(\n",
+    "    pipe,\n",
+    "    lora_ckpt,\n",
+    "    patch_text=False,\n",
+    "    patch_ti=True,\n",
+    "    patch_unet=True,\n",
+    "    filter_crossattn_str = 'cross+self'\n",
+    ")\n",
+    "\n",
+    "data  = CLIPTiDataset(instance_data_root=\"../custom_data/data/dog\",\n",
+    "                      placeholder_tokens=\"<krk1>\",\n",
+    "                      class_token='dog'\n",
+    "                      )\n",
+    "clip = CLIPTiScoreCalculator(text_model = pipe.text_encoder.text_model,\n",
+    "                             tokenizer = pipe.tokenizer,\n",
+    "                             placeholder_tokens = \"<krk1>\",\n",
+    "                             class_token_len = 1)\n",
+    "data_loader = torch.utils.data.DataLoader(data, batch_size=2, shuffle=False, num_workers=1)\n",
+    "clip_batch = next(iter(data_loader))\n",
+    "instance_texts = clip_batch['text']\n",
+    "instance_images = [image for image in clip_batch['np_instance_image']]\n",
+    "outputs = clip.clip_forward(instance_texts, instance_images)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lora_path = '/home/zhicai/poseVideo/lora-master/output_dog_Ti-Noclip_norm/lora_weight_e62_s10000.safetensors'\n",
     "# lora_path = '/home/zhicai/poseVideo/lora-master/output_dog_Ti-Noclip_norm/lora_weight_e62_s10000.safetensors'\n",
     "# lora_path = '../output_dog_cross+self_tR0.001_nR0.001/lora_weight_e12_s2000.safetensors'\n",
@@ -87,85 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../output/output_dog_Ti-clip_norm_3e-5/lora_weight_e1_s200.safetensors\n",
-      "<krk1>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:11<00:00,  4.52it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../output/output_dog_Ti-clip_norm_3e-5/lora_weight_e13_s2200.safetensors\n",
-      "<krk1>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:11<00:00,  4.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../output/output_dog_Ti-clip_norm_3e-5/lora_weight_e26_s4200.safetensors\n",
-      "<krk1>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:11<00:00,  4.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../output/output_dog_Ti-clip_norm_3e-5/lora_weight_e38_s6200.safetensors\n",
-      "<krk1>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:11<00:00,  4.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../output/output_dog_Ti-clip_norm_3e-5/lora_weight_e51_s8200.safetensors\n",
-      "<krk1>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [00:11<00:00,  4.52it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import copy\n",
     "import glob\n",
