--- a/scripts_my/visualize.ipynb
+++ b/scripts_my/visualize.ipynb
@@ -504,6 +504,57 @@
    "source": [
     "visualize_images(imgs,save=False,nrow=4,show=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/zhicai/miniconda3/envs/ldm/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "device = 'cuda:2'\n",
+    "a = torch.randn(1,2,3)\n",
+    "b = torch.randn(1,2,3).to('cuda:0')\n",
+    "for _inputs in [a, b]:\n",
+    "    if isinstance(_inputs, torch.LongTensor):\n",
+    "        _inputs = _inputs.to(device)\n",
+    "    elif isinstance(_inputs, torch.FloatTensor):\n",
+    "        _inputs = _inputs.to(device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
