Combine clip text and image guidance im clip_ti_reg.py

--- a/scripts_my/test.ipynb
+++ b/scripts_my/test.ipynb
@@ -2,9 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: load_ext: command not found\n",
+      "/bin/bash: autoreload: command not found\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/zhicai/miniconda3/envs/ldm/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7f78bc142650>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "! load_ext autoreload\n",
     "! autoreload 2\n",
@@ -27,7 +54,7 @@
     "from lora_diffusion.lora import _find_modules, UNET_CROSSATTN_TARGET_REPLACE\n",
     "from reg_lora.visual import visualize_images\n",
     "\n",
-    "# os.environ[\"DISABLE_TELEMETRY\"] = 'YES'\n",
+    "os.environ[\"DISABLE_TELEMETRY\"] = 'YES'\n",
     "model_id = \"runwayml/stable-diffusion-v1-5\"\n",
     "device = torch.device(\"cuda:3\")\n",
     "pipe = StableDiffusionPipeline.from_pretrained(model_id, torch_dtype=torch.float16,local_files_only=True,revision='39593d5650112b4cc580433f6b0435385882d819').to(device)\n",
