Refactor: successfully run sample

--- a/notebook/debug.ipynb
+++ b/notebook/debug.ipynb
@@ -25,7 +25,7 @@
     "sys.path.append('../')\n",
     "from lora_diffusion import LoraInjectedConv2d, LoraInjectedLinear, patch_pipe, tune_lora_scale\n",
     "from lora_diffusion.lora import _find_modules, UNET_CROSSATTN_TARGET_REPLACE\n",
-    "from reg_lora.visual import visualize_images\n",
+    "from visualization.vis_image import visualize_images\n",
     "\n",
     "os.environ[\"DISABLE_TELEMETRY\"] = 'YES'\n",
     "model_id = \"runwayml/stable-diffusion-v1-5\"\n",
