--- a/notebook/evaluate.ipynb
+++ b/notebook/evaluate.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "from lora_diffusion import evaluate_pipe, prepare_clip_model_sets, LoraInjectedConv2d, LoraInjectedLinear, patch_pipe, tune_lora_scale, parse_safeloras\n",
     "from lora_diffusion.lora import _find_modules, UNET_CROSSATTN_TARGET_REPLACE, DEFAULT_TARGET_REPLACE\n",
-    "from reg_lora.visual import visualize_images\n",
+    "from visualization.vis_image import visualize_images\n",
     "import safetensors\n",
     "import time\n",
     "\n",
